--- a/telinha/nbproject/project.properties
+++ b/telinha/nbproject/project.properties
@@ -54,7 +54,7 @@ javadoc.splitindex=true
 javadoc.use=true
 javadoc.version=false
 javadoc.windowtitle=
-main.class=telinha.Telinha
+main.class=br.com.unip.PrimeiraTela
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
